--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "name": "todolist-v3",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
